@@ -2571,8 +2571,12 @@ static int _will_run_test(struct job_record *job_ptr, bitstr_t *bitmap,
 		if (i >= min_nodes) {
 			rc = _job_test(job_ptr, bitmap, min_nodes, max_nodes,
 				       req_nodes);
-			if (rc == SLURM_SUCCESS)
-				job_ptr->start_time = now + 1;
+			if (rc == SLURM_SUCCESS) {
+				/* Actual start time will actually be later
+				 * than "now", but return "now" for backfill
+				 * scheduler to initiate preemption. */
+				job_ptr->start_time = now;
+			}
 		}
 	}
 
